Fixes bootstrap3theme collapsed main navbar top margin when slingbar isn't displayed

--- a/framework/modules/navigation/assets/less/dropdown-bootstrap.less
+++ b/framework/modules/navigation/assets/less/dropdown-bootstrap.less
@@ -10,11 +10,11 @@
 body {
 //	padding-top: 40px;
 }
-@media screen and (max-width: (@menu_width + 0px)) {
-    body {
-		margin-top: 50px;
-	}
-}
+//@media screen and (max-width: (@menu_width + 0px)) {
+//    body {
+//		margin-top: 50px;
+//	}
+//}
 
 .navbar-spacer-bottom {
 	position : fixed;
